# AndroidOpengGlTutorials

./: README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/orange/androidopenggltutorials/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sdfasf.glsl
app/src/main/assets/opengl/shape/: Triangle.glsl  lighting_cube.glsl  simple_cube.glsl  simple_cube_frag.glsl  texture_cube.glsl  texture_cube_frag.glsl
app/src/main/cpp/: CMakeLists.txt  JNIHere.cpp  JniManager.cpp  test.cpp
app/src/main/cpp/camera/: CameraManager.cpp  CameraManager.h  Preview.h
app/src/main/cpp/course/: BaseCourse.h  LightingCube.h  SimpleCube.h  SimpleTriangle.cpp  SimpleTriangle.h  TextureCube.h  YuvPictureCase.h
app/src/main/cpp/main/: CourseManager.cpp  CourseManager.h
app/src/main/cpp/shader/: simpleTriangle.fs  simpleTriangle.vs
app/src/main/cpp/shape/: CMakeLists.txt  holder.cpp  lighting_cube.cpp  simpel_cube.cpp  simple_cube.cpp  simple_triange.cpp  texture_cube.cpp
app/src/main/cpp/utils/: CMakeLists.txt  ImageDef.h  LogUtil.h  Shader.h  Texture.cpp  Texture.h  gltools.cpp  gltools.h  matrix.cpp  matrix.h
app/src/main/java/com/orange/androidopenggltutorials/: MainActivity.java  MainActivity.kt
app/src/main/java/com/orange/androidopenggltutorials/render/: BaseRender.java
app/src/main/java/com/orange/androidopenggltutorials/render/camera/: Camera2FrameCallback.java  Camera2Wrapper.java  CameraPreviewActivity.kt  CameraUtil.java  NativePreviewActivity.java  NativeRenderer.java  PreviewTestActivity.java
app/src/main/java/com/orange/androidopenggltutorials/render/shape/: NativeLib.java  ShapeActivity.kt  ShapeGlSurfaceView.java  ShapeWrapperRender.java  SimpleCubeJNI.java  TriangelJNI.java  Triangle.java
app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml  activity_native_preview.xml  activity_preview_test.xml  activity_shape.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/orange/androidopenggltutorials/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
